refactor: thorws IOException 구문 제거