@@ -1,6 +1,7 @@
 package tobyspring.hellospring.exrate;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+import java.net.URI;
 import tobyspring.hellospring.payment.ExRateProvider;
 
 import java.io.BufferedReader;
@@ -14,9 +15,10 @@ import java.util.stream.Collectors;
 public class WebApiExRateProvider implements ExRateProvider {
 
     @Override
-    public BigDecimal getExRate(String currency) throws IOException  {
-        URL url = new URL("https://open.er-api.com/v6/latest/" + currency);
-        HttpURLConnection connection = (HttpURLConnection) url.openConnection();
+    public BigDecimal getExRate(String currency) {
+        URI uri = new URI("https://open.er-api.com/v6/latest/" + currency);
+
+        HttpURLConnection connection = (HttpURLConnection) uri.toURL().openConnection();
         BufferedReader br = new BufferedReader(new InputStreamReader(connection.getInputStream()));
         String response = br.lines().collect(Collectors.joining());
         br.close();
@@ -24,7 +26,7 @@ public class WebApiExRateProvider implements ExRateProvider {
         ObjectMapper mapper = new ObjectMapper();
         ExRateData data = mapper.readValue(response, ExRateData.class);
 
-        System.out.println("API ExRate : " +data.rates().get("KRW"));
+        System.out.println("API ExRate : " + data.rates().get("KRW"));
 
         return data.rates().get("KRW");
     }
